use StringUtils.isBlank